Fixed overflow of table data contents

--- a/editor/css/stylesheet.css
+++ b/editor/css/stylesheet.css
@@ -189,6 +189,7 @@ a[data-disabled]
 {
     text-align: left;
     vertical-align: top;
+    word-wrap: break-word;
 }
 
 #metaScreen td input,
